# pywry-webview

./: .gitignore  README.md  justfile  package.json  pnpm-lock.yaml  pyproject.toml  svelte.config.js
pywry_webview/: __main__.py  api.py  deploy.py  models.py  service.py
src/lib/styles/: app.css
src/lib/ts/: message.ts  py_utils.ts  pysession.ts  store.ts
src/routes/: +layout.svelte  +page.svelte
