[tool.poetry]
name = "pywry-webview"
version = "0.1.0"
description = ""
authors = ["Qinbeans <rybeats@live.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.112.1"
uvicorn = "^0.30.6"
websockets = "^12.0"

[tool.poetry.dev-dependencies]
ruff = "^0.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
